@@ -17,11 +17,12 @@ package org.eclipse.cdt.make.core.scannerconfig;
  */
 public class ScannerInfoTypes {
     public static final ScannerInfoTypes COMPILER_COMMAND = new ScannerInfoTypes(1); // CCommandDSC
-    public static final ScannerInfoTypes INCLUDE_PATHS = new ScannerInfoTypes(2);
-    public static final ScannerInfoTypes QUOTE_INCLUDE_PATHS = new ScannerInfoTypes(3);
-    public static final ScannerInfoTypes SYMBOL_DEFINITIONS = new ScannerInfoTypes(4);
-    public static final ScannerInfoTypes TARGET_SPECIFIC_OPTION = new ScannerInfoTypes(5) ; 
-    public static final ScannerInfoTypes COMPILER_VERSION_INFO = new ScannerInfoTypes(6);
+    public static final ScannerInfoTypes UNDISCOVERED_COMPILER_COMMAND = new ScannerInfoTypes(2); // CCommandDSC whose SI has not been resolved
+    public static final ScannerInfoTypes INCLUDE_PATHS = new ScannerInfoTypes(10);
+    public static final ScannerInfoTypes QUOTE_INCLUDE_PATHS = new ScannerInfoTypes(11);
+    public static final ScannerInfoTypes SYMBOL_DEFINITIONS = new ScannerInfoTypes(12);
+    public static final ScannerInfoTypes TARGET_SPECIFIC_OPTION = new ScannerInfoTypes(13) ; 
+    public static final ScannerInfoTypes COMPILER_VERSION_INFO = new ScannerInfoTypes(14);
 
     private final int _enum;
 
